# HabitFlow.Api/Contracts/Auth/RefreshRequest.cs
@@ -1,5 +1,0 @@
-﻿namespace HabitFlow.Api.Contracts.Auth;
-
-public record RefreshRequest(
-    string RefreshToken
-);
